--- a/Popups.Maui/Popups.Maui.csproj
+++ b/Popups.Maui/Popups.Maui.csproj
@@ -51,5 +51,9 @@
 	<ItemGroup Condition="$(TargetFramework.Contains('net8.0'))">
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[8.0.0,)" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="Mopups" Version="1.3.1" />
+	</ItemGroup>
 	
 </Project>
