--- a/Samples/MauiSampleApp/MauiSampleApp.csproj
+++ b/Samples/MauiSampleApp/MauiSampleApp.csproj
@@ -55,6 +55,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
 		<PackageReference Include="Mopups" Version="1.3.1" />
+		<PackageReference Include="Prism.DryIoc.Maui" Version="9.0.401-pre" />
 		<PackageReference Include="ValueConverters.MAUI" Version="3.0.26" />
     
     <!--To avoid silly build errors... incredible!-->
