--- a/Popups.Maui/Popups.Maui.csproj
+++ b/Popups.Maui/Popups.Maui.csproj
@@ -34,7 +34,10 @@
 		<RepositoryUrl>https://github.com/thomasgalliker/MauiPopups</RepositoryUrl>
 		<Company>superdev GmbH</Company>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-		<PackageReleaseNotes>1.0
+		<PackageReleaseNotes>1.1
+- Add PopupDialogService to intercept Prism's popup handling
+
+1.0
 - Initial release
 		</PackageReleaseNotes>
 		<Copyright>Copyright $([System.DateTime]::Now.ToString(`yyyy`)) © Thomas Galliker</Copyright>
