--- a/Popups.Maui/Popups.Maui.csproj
+++ b/Popups.Maui/Popups.Maui.csproj
@@ -51,12 +51,9 @@
 		</None>
 	</ItemGroup>
 
-	<ItemGroup Condition="$(TargetFramework.Contains('net8.0'))">
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[8.0.0,)" />
-	</ItemGroup>
-
 	<ItemGroup>
-	  <PackageReference Include="Mopups" Version="1.3.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="[8.0.0,)" />
+	  <PackageReference Include="Mopups" Version="[1.3.1,)" />
 	</ItemGroup>
 	
 </Project>
