--- a/Popups.Maui.Prism/Popups.Maui.Prism.csproj
+++ b/Popups.Maui.Prism/Popups.Maui.Prism.csproj
@@ -50,7 +50,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Mopups" Version="1.3.1" />
-		<PackageReference Include="Prism.Maui" Version="9.0.537" />
+		<PackageReference Include="Prism.Maui" Version="[9.0.537,)" />
 	</ItemGroup>
 	
 	<ItemGroup Condition="$(TargetFramework.Contains('net8.0'))">
