Include all branches in trigger config

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,7 @@ pool:
 trigger:
   branches:
     include:
-    - main
-    - develop
-    - feature/*
-    - bugfix/*
+    - refs/heads/*
 
   paths:
     exclude:
