--- a/Popups.Maui.Prism/Popups.Maui.Prism.csproj
+++ b/Popups.Maui.Prism/Popups.Maui.Prism.csproj
@@ -49,7 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Mopups" Version="1.3.1" />
+		<PackageReference Include="Mopups" Version="[1.3.2,)" />
 		<PackageReference Include="Prism.Maui" Version="[9.0.537,)" />
 	</ItemGroup>
 	
