--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -142,6 +142,7 @@ steps:
     Contents: |
      **\bin\$(BuildConfiguration)\**
      **\bin\*.nupkg
+     **\bin\*.snupkg
 
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
      
