--- a/Popups.Maui.Prism/Popups.Maui.Prism.csproj
+++ b/Popups.Maui.Prism/Popups.Maui.Prism.csproj
@@ -39,6 +39,10 @@
 		</PackageReleaseNotes>
 		<Copyright>Copyright $([System.DateTime]::Now.ToString(`yyyy`)) © Thomas Galliker</Copyright>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <EmbedAllSources>true</EmbedAllSources>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
 	</PropertyGroup> 
 
 	<ItemGroup>
