--- a/Popups.Maui.Prism/Popups.Maui.Prism.csproj
+++ b/Popups.Maui.Prism/Popups.Maui.Prism.csproj
@@ -53,6 +53,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+    <PackageReference Include="Microsoft.Maui.Controls" Version="[8.0.72,)"/>
+    <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="[8.0.72,)"/>
 		<PackageReference Include="Mopups" Version="[1.3.2,)" />
 		<PackageReference Include="Prism.Maui" Version="[9.0.537,)" />
 	</ItemGroup>
